--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,3 +5,4 @@ linter:
   rules:
     avoid_classes_with_only_static_members: false
     avoid_setters_without_getters: false
+    avoid_positional_boolean_parameters: ignore
