--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: scale_monk
 description: A Flutter plugin to display Ads from ScaleMonk
-version: 0.1.1
+version: 0.2.0
 homepage: https://github.com/thize/scale_monk
 
 environment:
-  sdk: ">=2.12.0-0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
   flutter: ">=1.20.0"
 
 dependencies:
