--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: scale_monk
 description: A Flutter plugin to display Ads from ScaleMonk
-version: 0.4.1
+version: 0.4.1+1
 homepage: https://github.com/thize/scale_monk
 
 environment:
