--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: scale_monk
 description: A Flutter plugin to display Ads from ScaleMonk
-version: 0.4.2
+version: 0.4.2+1
 homepage: https://github.com/thize/flutter_scale_monk
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.20.0"
 
 dependencies:
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
-  lint: ^1.3.0
+  lint: ^1.5.2
 
 flutter:
   plugin:
