--- a/android/build.gradle
+++ b/android/build.gradle
@@ -50,11 +50,11 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.scalemonk.libs:ads:+'
-    implementation 'com.scalemonk.libs:ads-admob:+'
-    implementation 'com.scalemonk.libs:ads-unityads:+'
-    implementation 'com.scalemonk.libs:ads-facebook:+'
-    implementation 'com.scalemonk.libs:ads-ironsource:+'
-    implementation 'com.scalemonk.libs:ads-vungle:+'
-    implementation 'com.scalemonk.libs:ads-applovin:+'
+    implementation 'com.scalemonk.libs:ads:1.0.19'
+    implementation 'com.scalemonk.libs:ads-admob:1.0.19'
+    implementation 'com.scalemonk.libs:ads-unityads:1.0.19'
+    implementation 'com.scalemonk.libs:ads-facebook:1.0.19'
+    implementation 'com.scalemonk.libs:ads-ironsource:1.0.19'
+    implementation 'com.scalemonk.libs:ads-vungle:1.0.19'
+    implementation 'com.scalemonk.libs:ads-applovin:1.0.19'
 }
