--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -44,6 +44,8 @@ android {
         release {
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+            minifyEnabled false
+            shrinkResources false
         }
     }
 }
