--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.scale_monk_example">
+    <!-- package="com.scale_monk_example"> -->
    <application
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher">
@@ -38,10 +39,13 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-        <!-- <meta-data android:name="com.scalemonk.libs.ads.applicationId" 
-                   android:value="[YOUR ID HERE]" /> -->
-        <!-- <meta-data
+        <meta-data android:name="com.scalemonk.libs.ads.applicationId" 
+                   android:value="[YOUR ID HERE]" />
+        <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-xxxxxxxxxxxxxxxx~yyyyyyyyyy"/> -->
+            android:value="ca-app-pub-xxxxxxxxxxxxxxxx~yyyyyyyyyy"/>
+
+        <meta-data android:name="applovin.sdk.key" 
+        android:value="[YOUR APPLOVIN SDK KEY HERE]"/>
     </application>
 </manifest>
